--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Run tests
 
 on:
   workflow_dispatch:
-  pull_request:
+  push:
     branches-ignore:
       - 'l10n_master'
       - 'cf-pages'
