--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,16 +4,11 @@ name: Run tests
 on:
   workflow_dispatch:
   push:
-    branches-ignore:
-      - 'l10n_master'
-      - 'cf-pages'
-    paths:
-      - 'apps/**'
-      - 'libs/**'
-      - '*'
-      - '!*.md'
-      - '!*.txt'
-      - '.github/workflows/test.yml'
+    branches:
+      - "main"
+      - "rc"
+      - "hotfix-rc"
+  pull_request:
 
 defaults:
   run:
