--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -307,6 +307,74 @@ jobs:
         with:
           ref: main
 
+      ### Browser
+      - name: Browser - Verify version has been updated
+        if: ${{ inputs.bump_browser == true }}
+        env:
+          NEW_VERSION: ${{ inputs.version_number }}
+        run: |
+          CURRENT_VERSION=$(cat package.json | jq -r '.version')
+
+          # Wait for version to change.
+          while [[ "$NEW_VERSION" != "$CURRENT_VERSION" ]]
+          do
+            echo "Waiting for version to be updated..."
+            sleep 10
+            git pull --force
+          done
+        working-directory: apps/browser
+
+      ### CLI
+      - name: CLI - Verify version has been updated
+        if: ${{ inputs.bump_cli == true }}
+        env:
+          NEW_VERSION: ${{ inputs.version_number }}
+        run: |
+          CURRENT_VERSION=$(cat package.json | jq -r '.version')
+
+          # Wait for version to change.
+          while [[ "$NEW_VERSION" != "$CURRENT_VERSION" ]]
+          do
+            echo "Waiting for version to be updated..."
+            sleep 10
+            git pull --force
+          done
+        working-directory: apps/cli
+
+      ### Desktop
+      - name: Desktop - Verify version has been updated
+        if: ${{ inputs.bump_desktop == true }}
+        env:
+          NEW_VERSION: ${{ inputs.version_number }}
+        run: |
+          CURRENT_VERSION=$(cat package.json | jq -r '.version')
+
+          # Wait for version to change.
+          while [[ "$NEW_VERSION" != "$CURRENT_VERSION" ]]
+          do
+            echo "Waiting for version to be updated..."
+            sleep 10
+            git pull --force
+          done
+        working-directory: apps/desktop
+
+      ### Web
+      - name: Web - Verify version has been updated
+        if: ${{ inputs.bump_web == true }}
+        env:
+          NEW_VERSION: ${{ inputs.version_number }}
+        run: |
+          CURRENT_VERSION=$(cat package.json | jq -r '.version')
+
+          # Wait for version to change.
+          while [[ "$NEW_VERSION" != "$CURRENT_VERSION" ]]
+          do
+            echo "Waiting for version to be updated..."
+            sleep 10
+            git pull --force
+          done
+        working-directory: apps/web
+
       - name: Check if RC branch exists
         run: |
           remote_rc_branch_check=$(git ls-remote --heads origin rc | wc -l)
