--- a/libs/common/tsconfig.json
+++ b/libs/common/tsconfig.json
@@ -1,13 +1,5 @@
 {
   "extends": "../shared/tsconfig.libs",
-  "include": [
-    "src",
-    "spec",
-    "./custom-matchers.d.ts",
-    "../auth/src/common/abstractions/login-strategy.service.ts",
-    "../auth/src/common/services/login-strategies/login-strategy.service.ts",
-    "../auth/src/common/login-strategies",
-    "../auth/src/common/models/domain/login-credentials.ts"
-  ],
+  "include": ["src", "spec", "./custom-matchers.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
