--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -140,8 +140,7 @@ jobs:
   linux:
     name: Linux Build
     runs-on: ubuntu-20.04
-    needs:
-      - setup
+    needs: setup
     env:
       _PACKAGE_VERSION: ${{ needs.setup.outputs.package_version }}
       _NODE_VERSION: ${{ needs.setup.outputs.node_version }}
@@ -249,8 +248,7 @@ jobs:
   windows:
     name: Windows Build
     runs-on: windows-2019
-    needs:
-      - setup
+    needs: setup
     defaults:
       run:
         shell: pwsh
@@ -457,8 +455,7 @@ jobs:
   macos-build:
     name: MacOS Build
     runs-on: macos-11
-    needs:
-      - setup
+    needs: setup
     env:
       _PACKAGE_VERSION: ${{ needs.setup.outputs.package_version }}
       _NODE_VERSION: ${{ needs.setup.outputs.node_version }}
@@ -570,6 +567,7 @@ jobs:
           $package = Get-Content -Raw -Path electron-builder.json | ConvertFrom-Json
           $package | Add-Member -MemberType NoteProperty -Name buildVersion -Value "$env:BUILD_NUMBER"
           $package | ConvertTo-Json -Depth 32 | Set-Content -Path electron-builder.json
+          echo "### MacOS build number: $env:BUILD_NUMBER" >> $GITHUB_STEP_SUMMARY
 
       - name: Install Node dependencies
         run: npm ci
@@ -716,6 +714,7 @@ jobs:
           $package = Get-Content -Raw -Path electron-builder.json | ConvertFrom-Json
           $package | Add-Member -MemberType NoteProperty -Name buildVersion -Value "$env:BUILD_NUMBER"
           $package | ConvertTo-Json -Depth 32 | Set-Content -Path electron-builder.json
+          echo "### MacOS GitHub build number: $env:BUILD_NUMBER" >> $GITHUB_STEP_SUMMARY
 
       - name: Install Node dependencies
         run: npm ci
@@ -907,6 +906,7 @@ jobs:
           $package = Get-Content -Raw -Path electron-builder.json | ConvertFrom-Json
           $package | Add-Member -MemberType NoteProperty -Name buildVersion -Value "$env:BUILD_NUMBER"
           $package | ConvertTo-Json -Depth 32 | Set-Content -Path electron-builder.json
+          echo "### MacOS App Store build number: $env:BUILD_NUMBER" >> $GITHUB_STEP_SUMMARY
 
       - name: Install Node dependencies
         run: npm ci
@@ -1085,6 +1085,7 @@ jobs:
           $package = Get-Content -Raw -Path electron-builder.json | ConvertFrom-Json
           $package | Add-Member -MemberType NoteProperty -Name buildVersion -Value "$env:BUILD_NUMBER"
           $package | ConvertTo-Json -Depth 32 | Set-Content -Path electron-builder.json
+          echo "### MacOS Dev build number: $env:BUILD_NUMBER" >> $GITHUB_STEP_SUMMARY
 
       - name: Install Node dependencies
         run: npm ci
