--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -567,7 +567,7 @@ jobs:
           $package = Get-Content -Raw -Path electron-builder.json | ConvertFrom-Json
           $package | Add-Member -MemberType NoteProperty -Name buildVersion -Value "$env:BUILD_NUMBER"
           $package | ConvertTo-Json -Depth 32 | Set-Content -Path electron-builder.json
-          echo "### MacOS build number: $env:BUILD_NUMBER" >> $GITHUB_STEP_SUMMARY
+          $env:GITHUB_STEP_SUMMARY += "### MacOS build number: $env:BUILD_NUMBER"
 
       - name: Install Node dependencies
         run: npm ci
@@ -714,7 +714,7 @@ jobs:
           $package = Get-Content -Raw -Path electron-builder.json | ConvertFrom-Json
           $package | Add-Member -MemberType NoteProperty -Name buildVersion -Value "$env:BUILD_NUMBER"
           $package | ConvertTo-Json -Depth 32 | Set-Content -Path electron-builder.json
-          echo "### MacOS GitHub build number: $env:BUILD_NUMBER" >> $GITHUB_STEP_SUMMARY
+          $env:GITHUB_STEP_SUMMARY += "### MacOS GitHub build number: $env:BUILD_NUMBER"
 
       - name: Install Node dependencies
         run: npm ci
@@ -906,7 +906,7 @@ jobs:
           $package = Get-Content -Raw -Path electron-builder.json | ConvertFrom-Json
           $package | Add-Member -MemberType NoteProperty -Name buildVersion -Value "$env:BUILD_NUMBER"
           $package | ConvertTo-Json -Depth 32 | Set-Content -Path electron-builder.json
-          echo "### MacOS App Store build number: $env:BUILD_NUMBER" >> $GITHUB_STEP_SUMMARY
+          $env:GITHUB_STEP_SUMMARY += "### MacOS App Store build number: $env:BUILD_NUMBER"
 
       - name: Install Node dependencies
         run: npm ci
@@ -1085,7 +1085,7 @@ jobs:
           $package = Get-Content -Raw -Path electron-builder.json | ConvertFrom-Json
           $package | Add-Member -MemberType NoteProperty -Name buildVersion -Value "$env:BUILD_NUMBER"
           $package | ConvertTo-Json -Depth 32 | Set-Content -Path electron-builder.json
-          echo "### MacOS Dev build number: $env:BUILD_NUMBER" >> $GITHUB_STEP_SUMMARY
+          $env:GITHUB_STEP_SUMMARY += "### MacOS Dev build number: $env:BUILD_NUMBER"
 
       - name: Install Node dependencies
         run: npm ci
