PM-5434 Initial work on migration

--- a/apps/browser/tsconfig.json
+++ b/apps/browser/tsconfig.json
@@ -29,5 +29,9 @@
     "strictTemplates": true,
     "preserveWhitespaces": true
   },
-  "include": ["src", "../../libs/common/src/platform/services/**/*.worker.ts"]
+  "include": [
+    "src",
+    "../../libs/common/src/platform/services/**/*.worker.ts",
+    "src/vault/services/vault-browser-state.service.ts"
+  ]
 }
