--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "homepage": "https://bitwarden.com",
   "scripts": {
     "prepare": "husky",
-    "lint": "eslint .",
+    "lint": "eslint . --cache --cache-strategy content && prettier --check .",
     "lint:fix": "eslint . --cache --cache-strategy content --fix",
     "lint:clear": "rimraf .eslintcache",
     "prettier": "prettier --cache --write .",
