DEVOPS-1743 REFACTOR: Azure Storage Account sync process

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -232,22 +232,14 @@ jobs:
         working-directory: apps/web
         run: unzip ${{ env._ENVIRONMENT_ARTIFACT }}
 
-      - name: Empty container in Storage Account
-        run: |
-          az storage blob delete-batch \
-            --source '$web' \
-            --pattern '*' \
-            --connection-string "${{ steps.retrieve-secrets.outputs.sa-bitwarden-web-vault-dev-key-temp }}"
-
-      - name: Deploy to Azure Storage Account
+      - name: Sync to Azure Storage Account
         working-directory: apps/web
         run: |
-          az storage blob upload-batch \
+          az storage blob sync \
             --source "./build" \
-            --destination '$web' \
+            --container '$web' \
             --connection-string "${{ steps.retrieve-secrets.outputs.sa-bitwarden-web-vault-dev-key-temp }}" \
-            --overwrite \
-            --no-progress
+            --only-show-errors
 
       - name: Update deployment status to Success
         if: success()
