--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -87,6 +87,7 @@ apps/browser/src/autofill @bitwarden/team-autofill-dev
 ## Component Library ##
 .storybook @bitwarden/team-component-library
 libs/components @bitwarden/team-component-library
+apps/web/src/app/layouts/header
 
 ## Desktop native module ##
 apps/desktop/desktop_native @bitwarden/team-platform-dev
