--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -212,12 +212,12 @@ jobs:
         with:
           creds: ${{ secrets[needs.setup.outputs.azure-login-creds] }}
 
-      - name: Retrieve Storage Account connection string
+      - name: Retrieve Storage Account name
         id: retrieve-secrets
         uses: bitwarden/gh-actions/get-keyvault-secrets@main
         with:
           keyvault: ${{ needs.setup.outputs.retrieve-secrets-keyvault }}
-          secrets: "sa-bitwarden-web-vault-dev-key-temp"
+          secrets: "sa-bitwarden-web-vault-name"
 
       - name: 'Download cloud asset from branch/tag: ${{ inputs.branch-or-tag }}'
         uses: bitwarden/gh-actions/download-artifacts@main
@@ -235,10 +235,9 @@ jobs:
       - name: Sync to Azure Storage Account
         working-directory: apps/web
         run: |
-          az storage blob sync \
-            --source "./build" \
-            --container '$web' \
-            --connection-string "${{ steps.retrieve-secrets.outputs.sa-bitwarden-web-vault-dev-key-temp }}"
+          azcopy copy ./build "https://${{ steps.retrieve-secrets.outputs.sa-bitwarden-web-vault-name }}.blob.core.windows.net/$web/" \
+            --delete-destination=true
+
       - name: Debug index.html
         run: cat apps/web/build/index.html
 
