--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -235,6 +235,7 @@ jobs:
       - name: Sync to Azure Storage Account
         working-directory: apps/web
         run: |
+          azcopy --version
           azcopy copy ./build "https://${{ steps.retrieve-secrets.outputs.sa-bitwarden-web-vault-name }}.blob.core.windows.net/$web/" \
             --delete-destination=true
 
