Revert "DEVOPS-1743 TEST: Update Azure storage URL in deploy-web.yml"
This reverts commit f551f89d21e0b95804c6c438a0b9a5d463c4e92a.

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -237,7 +237,7 @@ jobs:
         run: |
           azcopy --version
           export AZCOPY_AUTO_LOGIN_TYPE=AZCLI
-          azcopy sync ./build 'https://bwwebvaultklrt.blob.core.windows.net/$web/' \
+          azcopy sync ./build 'https://${{ steps.retrieve-secrets.outputs.sa-bitwarden-web-vault-name }}.blob.core.windows.net/$web/' \
             --delete-destination=true
 
       - name: Debug index.html
