DEVOPS-1743 REFACTOR: deploy-web.yml script to fix sync command

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -236,11 +236,11 @@ jobs:
         working-directory: apps/web
         run: |
           azcopy --version
-          printenv
           export AZCOPY_AUTO_LOGIN_TYPE=AZCLI
           # Extract date using the format YYYY-MM-DD for se parameter
           export DATE=$(date +%Y-%m-%d)
-          azcopy sync ./build 'https://${{ steps.retrieve-secrets.outputs.sa-bitwarden-web-vault-name }}.blob.core.windows.net/$web/?se=${DATE}' \
+          printenv
+          azcopy sync ./build https://${{ steps.retrieve-secrets.outputs.sa-bitwarden-web-vault-name }}.blob.core.windows.net/$web/?se=${DATE} \
             --delete-destination=true
 
       - name: Debug index.html
