DEVOPS-1743 Add debug logs for azcopy

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -243,7 +243,9 @@ jobs:
           printenv
           azcopy sync ./build 'https://${{ steps.retrieve-secrets.outputs.sa-bitwarden-web-vault-name }}.blob.core.windows.net/$web/?se=2024-02-19' \
             --delete-destination=true
-          cat /home/runner/.azcopy/*.log
+
+      - name: Debug azcopy logs
+        run: cat /home/runner/.azcopy/*.log
 
       - name: Debug index.html
         run: cat apps/web/build/index.html
