DEVOPS-1743 FIX: conditional statements in deploy-web.yml

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -215,7 +215,7 @@ jobs:
           creds: ${{ secrets[needs.setup.outputs.azure-login-creds] }}
 
       - name: Retrieve Storage Account connection string for az sync
-        when: ${{ needs.setup.outputs.sync-utility == 'az-sync' }}
+        if: ${{ needs.setup.outputs.sync-utility == 'az-sync' }}
         id: retrieve-secrets-az-sync
         uses: bitwarden/gh-actions/get-keyvault-secrets@main
         with:
@@ -223,7 +223,7 @@ jobs:
           secrets: "sa-bitwarden-web-vault-dev-key-temp"
 
       - name: Retrieve Storage Account name for azcopy
-        when: ${{ needs.setup.outputs.sync-utility == 'azcopy' }}
+        if: ${{ needs.setup.outputs.sync-utility == 'azcopy' }}
         id: retrieve-secrets-azcopy
         uses: bitwarden/gh-actions/get-keyvault-secrets@main
         with:
@@ -244,7 +244,7 @@ jobs:
         run: unzip ${{ env._ENVIRONMENT_ARTIFACT }}
 
       - name: Sync to Azure Storage Account using az storage blob sync
-        when: ${{ needs.setup.outputs.sync-utility == 'az-sync' }}
+        if: ${{ needs.setup.outputs.sync-utility == 'az-sync' }}
         working-directory: apps/web
         run: |
           az storage blob sync \
@@ -253,7 +253,7 @@ jobs:
             --connection-string "${{ steps.retrieve-secrets-az-sync.outputs.sa-bitwarden-web-vault-dev-key-temp }}"
 
       - name: Sync to Azure Storage Account using azcopy
-        when: ${{ needs.setup.outputs.sync-utility == 'azcopy' }}
+        if: ${{ needs.setup.outputs.sync-utility == 'azcopy' }}
         continue-on-error: true
         working-directory: apps/web
         run: |
