--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -265,8 +265,7 @@ jobs:
           azcopy sync ./build 'https://${{ steps.retrieve-secrets-azcopy.outputs.sa-bitwarden-web-vault-name }}.blob.core.windows.net/$web/?se=2024-02-19' \
             --delete-destination=true
 
-      - name: Debug azcopy logs
-        if: ${{ needs.setup.outputs.sync-utility == 'azcopy' }}
+      - name: Debug sync logs
         run: cat /home/runner/.azcopy/*.log
 
       - name: Debug index.html
