DEVOPS-1743 FIX: azcopy sync destination URL

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -276,7 +276,7 @@ jobs:
           azcopy login status
           # Extract date using the format YYYY-MM-DD for se parameter
           export DATE=$(date +%Y-%m-%d)
-          azcopy sync ./build 'https://${{ steps.retrieve-secrets-azcopy.outputs.sa-bitwarden-web-vault-name }}.blob.core.windows.net/$web/?se=2024-02-19' \
+          azcopy sync ./build 'https://${{ steps.retrieve-secrets-azcopy.outputs.sa-bitwarden-web-vault-name }}.blob.core.windows.net/$web/ \
             --delete-destination=true
 
       - name: Debug sync logs
