DEVOPS-1743 ADD: retrieval of Storage Account SPN Client Secret for azcopy

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -241,6 +241,14 @@ jobs:
           keyvault: ${{ needs.setup.outputs.retrieve-secrets-keyvault }}
           secrets: "sa-bitwarden-web-vault-name"
 
+      - name: Retrieve Storage Account SPN Client Secret for azcopy
+        if: ${{ needs.setup.outputs.sync-utility == 'azcopy' }}
+        id: retrieve-secrets-azcopy-sp-secret
+        uses: bitwarden/gh-actions/get-keyvault-secrets@main
+        with:
+          keyvault: ${{ needs.setup.outputs.retrieve-secrets-keyvault }}
+          secrets: "sp-bitwarden-web-vault-password"
+
       - name: 'Download cloud asset from branch/tag: ${{ inputs.branch-or-tag }}'
         uses: bitwarden/gh-actions/download-artifacts@main
         with:
@@ -270,7 +278,7 @@ jobs:
         env:
           AZCOPY_AUTO_LOGIN_TYPE: SPN
           AZCOPY_SPA_APPLICATION_ID: 5ff59556-2b91-4f33-87df-3f9bbc1f6a84
-          AZCOPY_SPA_CLIENT_SECRET: ${{ secrets[needs.setup.outputs.azure-login-creds] }}
+          AZCOPY_SPA_CLIENT_SECRET: ${{ steps.retrieve-secrets-azcopy-sp-secret.outputs.sp-bitwarden-web-vault-password }}
           AZCOPY_TENANT_ID: 10c0387a-9792-4d9f-b1b1-ebc6785914ce
         run: |
           azcopy --version
