--- a/libs/common/tsconfig.json
+++ b/libs/common/tsconfig.json
@@ -1,11 +1,5 @@
 {
   "extends": "../shared/tsconfig.libs",
-  "include": [
-    "src",
-    "spec",
-    "./custom-matchers.d.ts",
-    "../../apps/browser/src/vault/services/vault-browser",
-    "../../apps/browser/src/vault/services/vault-browser-state.service.ts"
-  ],
+  "include": ["src", "spec", "./custom-matchers.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
