Indicate test code

--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -57,3 +57,4 @@ jobs:
             -Dsonar.organization=${{ github.repository_owner }}
             -Dsonar.projectKey=${{ github.repository_owner }}_${{ github.event.repository.name }}
             -Dsonar.test.exclusions=**/*.spec.ts
+            -Dsonar.tests=**/*.spec.ts
