--- a/.github/workflows/build-browser.yml
+++ b/.github/workflows/build-browser.yml
@@ -257,6 +257,11 @@ jobs:
           node --version
           npm --version
 
+      - name: Login to Azure
+        uses: Azure/login@e15b166166a8746d1a47596803bd8c1b595455cf # v1.6.0
+        with:
+          creds: ${{ secrets.AZURE_KV_CI_SERVICE_PRINCIPAL }}
+
       - name: Download Provisioning Profiles secrets
         env:
           ACCOUNT_NAME: bitwardenci
